Adds postgres-server packager to dockerfile, req by openshift-ci
Signed-off-by: Samyak Jain <samyak.jn11@gmail.com>

--- a/.ci/openshift-ci/Dockerfile
+++ b/.ci/openshift-ci/Dockerfile
@@ -5,4 +5,5 @@ SHELL ["/bin/bash", "-c"]
 # Install kubectl
 RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && \
     chmod +x ./kubectl && \
-    mv ./kubectl /usr/local/bin
+    mv ./kubectl /usr/local/bin && \
+    yum -y install postgresql-server
